# trabalho-CG

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  box.3d  config.xml  flake.nix  shell.nix
demo/: basic.patch  bezier.3d  bezier_nt.3d  box.3d  box_nt.3d  cone.3d  cone_nt.3d  cylinder.3d  cylinder.xml  disctorus.3d  plane.3d  plane_nt.3d  planet.xml  sphere.3d  sphere_nt.3d  teapot.3d  test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml  test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_6.xml  test_4_7.xml  test_cylinder.xml  torus.3d  torus.xml
demo/bamboo/: README.md  bamboo.xml  bambooforest.py  bambooring.3d  bambooslice.3d  floor.3d
demo/solar system/: comet1.3d  comet2.3d  comet3.3d  comet4.3d  earth.3d  jupiter.3d  mars.3d  mercury.3d  moon.3d  neptune.3d  saturn.3d  saturn_ring1.3d  saturn_ring2.3d  solarsystem.xml  sun.3d  uranus.3d  venus.3d
demo/villager/: vil_arm.3d  vil_body.3d  vil_hand.3d  vil_head.3d  vil_hornbase.3d  vil_hornmid.3d  vil_horntip.3d  vil_leg.3d  vil_pant.3d  vil_shoebase.3d  vil_shoetip.3d  vil_sleeve.3d  villager.xml
includes/common/: geometry.hpp  polar.hpp  shapes.h  shapes.hpp
includes/dependencies/: pugixml.hpp
includes/engine/: camera.hpp  config.hpp  input.hpp  light.hpp  render.hpp  textures.hpp  vbo.hpp  xmlParser.hpp
includes/generator/: figure.hpp  io.hpp  plane.hpp
src/common/: CMakeLists.txt  geometry.cpp  polar.cpp  shapes.cpp
src/engine/: CMakeLists.txt  camera.cpp  config.cpp  input.cpp  light.cpp  main.cpp  pugixml.cpp  render.cpp  textures.cpp  vbo.cpp  xmlParser.cpp
src/generator/: CMakeLists.txt  generator  io.cpp  main.cpp  plane.cpp  shapes.cpp  shapes.h
